@@ -1,6 +1,7 @@
 0.86.00 2003-DEC-
 
 -Save the selected skill
+-New skill form (smaller, more compatible code)
 
 0.85.00 2003-JUN-22
 
